--- a/MapLocationProject/Base.lproj/Main.storyboard
+++ b/MapLocationProject/Base.lproj/Main.storyboard
@@ -21,17 +21,40 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="cMM-4O-N0o"/>
                                 </connections>
                             </mapView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Pin_Map1.png" translatesAutoresizingMaskIntoConstraints="NO" id="0Ay-pi-RXd">
+                                <rect key="frame" x="187" y="428" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="JMk-xS-iyl"/>
+                                    <constraint firstAttribute="width" constant="40" id="v7u-4q-6x3"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="56X-Cw-8uP">
+                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="iD3-cq-rFA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="0Ay-pi-RXd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="C7F-IE-oZD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="56X-Cw-8uP" secondAttribute="trailing" id="Hl1-XZ-bxb"/>
+                            <constraint firstItem="0Ay-pi-RXd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="It8-57-dzt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="56X-Cw-8uP" secondAttribute="bottom" id="Paq-bG-ai3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="01V-Kc-EoC" secondAttribute="trailing" id="Pgh-LU-KTF"/>
                             <constraint firstItem="01V-Kc-EoC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WSc-SM-BQ7"/>
                             <constraint firstItem="01V-Kc-EoC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kEk-Z6-jQJ"/>
+                            <constraint firstItem="56X-Cw-8uP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ya2-Gf-wuF"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="01V-Kc-EoC" secondAttribute="bottom" id="zcB-gw-HeU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="addressLabel" destination="56X-Cw-8uP" id="rr3-C2-svS"/>
                         <outlet property="mapView" destination="01V-Kc-EoC" id="DCz-ag-aYx"/>
                     </connections>
                 </viewController>
@@ -40,4 +63,7 @@
             <point key="canvasLocation" x="139" y="116"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Pin_Map1.png" width="15.840000152587891" height="45.599998474121094"/>
+    </resources>
 </document>
